--- a/app/elements/common/services/challenge-template-service.html
+++ b/app/elements/common/services/challenge-template-service.html
@@ -85,11 +85,8 @@
 				this.$.getMultiChallengeTemplates.generateRequest();
 			},
 			getAll: function(){
-				if(!util.organization()){
-					return page('/');
-				}
 				this.app.startLoading();
-				this.$.getMultiChallengeTemplates.url = util.build('/challenges/templates?organization=' + util.organization().id);
+				this.$.getMultiChallengeTemplates.url = util.build('/challenges/templates');
 				this.$.getMultiChallengeTemplates.generateRequest();
 			},
 			_onResponse: function(){
