--- a/app/elements/common/services/user-service.html
+++ b/app/elements/common/services/user-service.html
@@ -105,7 +105,7 @@
 			},
 			invite: function(user){
 				this.app.startLoading();
-				this.$.inviteUser.url = util.build('/invite?organization=' + user.organizationId);
+				this.$.inviteUser.url = util.build('/invite');
 				this.$.inviteUser.body = user;
 				this.$.inviteUser.generateRequest();
 			},
