--- a/app/elements/company/candidate/invite/invite-candidates.html
+++ b/app/elements/company/candidate/invite/invite-candidates.html
@@ -85,8 +85,7 @@
 				for (var i = 0; i < this.candidates.length; i++) {
 					this.$.userService.invite({
 						'email': this.candidates[i].email,
-						'challengeId': this.candidates[i].challengeId,
-						'organizationId': util.organization().id
+						'challengeId': this.candidates[i].challengeId
 					});
 				}
 				this.$.dialog.close();
