--- a/app/elements/coder/code-editor/file-explorer/explorer-folder.html
+++ b/app/elements/coder/code-editor/file-explorer/explorer-folder.html
@@ -34,12 +34,12 @@
 				<div id="folder-name">{{meta.name}}</div>
 			</template>
 		</div>
-		<template is="dom-repeat" items="{{children}}">
+		<template is="dom-repeat" items="{{meta.children}}">
 			<template is="dom-if" if="{{item.isFolder}}">
-				<explorer-folder meta="{{item}}"></explorer-folder>
+				<explorer-folder meta="{{item}}" on-rename="_checkRename" on-delete="_deleteChild"></explorer-folder>
 			</template>
 			<template is="dom-if" if="{{!item.isFolder}}">
-				<explorer-file meta="{{item}}"></explorer-file>
+				<explorer-file meta="{{item}}" on-rename="_checkRename" on-delete="_deleteChild"></explorer-file>
 			</template>
 		</template>
 		<paper-toast id="toast"></paper-toast>
@@ -51,34 +51,33 @@
 			behaviors: [
 				Behaviors.FileExplorerItemBehavior
 			],
-			properties: {
-				children: {
-					type: Array,
-					notify: true
+			addFolder: function(folderName){
+				if (!this.meta.children){
+					this.set('meta.children', []);
 				}
-			},
-			addFolder: function(){
-				if (!this.children){
-					this.children = [];
-				}
-				this.push('children', {
-					'name': this.findFirstAvailableName('newfolder', true),
+				var newFolder = {
 					'isFolder': true,
-					'order': this.meta.order + 1,
-					'parent': this
-				});
-				console.log(this.children);
+					'order': this.meta.order + 1
+				};
+				newFolder.name = !!folderName ? folderName : this.findFirstAvailableName('newfolder', true);
+				this.push('meta.children', newFolder);
 			},
-			addFile: function(){
-				if (!this.children){
-					this.children = [];
+			addFile: function(fileName, content, selected){
+				if (!this.meta.children){
+					this.set('meta.children', []);
 				}
-				this.push('children', {
-					'name': this.findFirstAvailableName('newfile', false),
+				var newFile = {
 					'isFolder': false,
-					'order': this.meta.order + 1,
-					'parent': this
-				});
+					'order': this.meta.order + 1
+				};
+				newFile.name = !!fileName ? fileName : this.findFirstAvailableName('newfile', false);
+				newFile.content = !!content ? content : '';
+				newFile.selected = !!selected;
+				this.push('meta.children', newFile);
+			},
+			_checkRename: function(e, el){
+				var conflict = this.findFirstAvailableName(el.newName, el.meta.isFolder) !== el.newName;
+				el.finishRename(conflict);
 			},
 			findFirstAvailableName(name, isFolder){
 				var ok = false;
@@ -86,8 +85,8 @@
 				var searchName = name;
 				while(!ok){
 					ok = true;
-					for (var i = 0; i < this.children.length; i++){
-						if (this.children[i].name === searchName && this.children[i].isFolder === isFolder){
+					for (var i = 0; i < this.meta.children.length; i++){
+						if (this.meta.children[i].name === searchName && this.meta.children[i].isFolder === isFolder){
 							tries++;
 							searchName = name + '(' + tries + ')';
 							ok = false;
@@ -96,12 +95,87 @@
 				}
 				return searchName;
 			},
-			deleteChild: function(meta){
-				var index = this.children.indexOf(meta);
+			getSquashedFilesAsJson: function(){
+				if (!this.meta.children){
+					return [];
+				}
+				var files = [];
+				for (var i = 0; i < this.meta.children.length; i++){
+					var el = this.meta.children[i];
+					if (!el.isFolder){
+						files.push({
+							'name': el.name,
+							'content': el.content
+						});
+						console.log(files);
+					}else{
+						var cFiles = [];
+						this._getSquashedFilesForFolder(el, cFiles, '');
+						files = files.concat(cFiles);
+					}
+				}
+				return files;
+			},
+			_getSquashedFilesForFolder: function(folder, files, prefix){
+				var cPrefix = prefix + folder.name + '/';
+				for(var i = 0; i < folder.children.length; i++){
+					var el = folder.children[i];
+					if (el.isFolder){
+						this._getSquashedFilesForFolder(el, files, cPrefix);
+					}else{
+						files.push({
+							'name': cPrefix + el.name,
+							'content': el.content
+						})
+					}
+				}
+			},
+			_deleteChild: function(e, childMeta){
+				var index = this.meta.children.indexOf(childMeta);
 				if (index < 0){
 					return;
 				}
-				this.splice('children', index, 1);
+				this.splice('meta.children', index, 1);
+			},
+			selectFile: function(){
+				var file = this.$$('explorer-file');
+				console.log(file);
+				if (!!file){
+					file.selectFile();
+				}
+			},
+			putSelectedFile: function(filePath, content){
+				var separator = filePath.indexOf('/');
+				if (separator === -1){
+					this.addFile(filePath, content);
+					return;
+				}
+				if (!this.meta.children){
+					this.set('meta.children', []);
+				}
+				var folderName;
+				var parentFolder = this.meta;
+				var newFolder;
+				while (separator !== -1){
+					folderName = filePath.substring(0, separator);
+					newFolder = {
+						'name': folderName,
+						'isFolder': true,
+						'order': parentFolder.order + 1
+					};
+					this.push('meta.children', newFolder);
+					parentFolder = newFolder;
+					filePath = filePath.substring(separator + 1, filePath.length);
+					separator = filePath.indexOf('/');
+				}
+				var newFile = {
+					'name': filePath,
+					'content': content,
+					'isFolder': false,
+					'order': parentFolder.order + 1,
+					'selected': true
+				};
+				this.push('meta.children', newFile);
 			}
 		});
 	</script>
